ChangeLog for ARQ
=================
(the list covers new features and refinements.  See ASF JIRA for details of bugs fixed) 

==== ARQ 2.9.4

+ JENA-322 : Make jcl-over-slf4 a required dependency
+ JENA-321 : Remove GraphStore.(start|finish)Request() (was previosuly deprecated)
+ Remove deprecated QueryExecutionBase.cancelAllowDrain (see JENA-93)
+ Implement WG decision on BIND : use original semantics. 
+ JENA-294 : improved optimization of sequeneces of OPTIONALs where the grouois only OPTIONAL and an equality filter
+ JENA-302 Add URIs for all XQuery/Xpath F&O functions for duration accessors
+ JENA-303 Add URIs for all XQuery/Xpath F&O functions where there are SPARQL functions
+ JENA-328 : implement OSGi friendly DatatypeFactory initialisation in NodeValue
+ Support for parsing boolean results from TSV and CSV inputs

==== ARQ 2.9.3

+ Interface DataSource removed after having been deprecated across releases.
  Use Dataset.
+ Remove many deprecated operations in classes Query, UpdateFactory and UpdateRequest.
  Also many internal operations marked deprecated were removed.

==== ARQ 2.9.2

+ Significant speed-up of MINUS queries (JENA-266) : contribution from Paul Gearon (@quoll). 
+ Log warning messages generated by failures in SERVICE clauses now include the URI of the
  service that failed (JENA-269) : suggestion by Claude Warren
+ Support for dynamic function invocation built-in CALL() when using ARQ language

==== ARQ 2.9.1

+ SPARQL 1.1: STRBEFORE and STRAFTER return simple empty string on no match.
+ Stop multiple SERVICE calls locking Fuseki up (JENA-248)
+ (internal) DatasetPrefixStorage : change removeFromPrefixMap(String, String, String) to removeFromPrefixMap(String, String)
+ Changes for BINDINGS (SPARQL 1.1) - align with SPARQL-WG
  Now called VALUES : slight syntax changes.
  VALUES can be inline data as part of a query pattern.  
+ Comprehensive support for date/time/durations operations (JENA-235)